--- a/invitacion.html
+++ b/invitacion.html
@@ -125,7 +125,7 @@ h1 {
 
   <div id="carta1" class="carta visible">
   <h1>🕊️ Mi Primera Comunión 🙏</h1>
-  <p>Con mucha alegría ✨ invitamos a la</p>
+  <p>Con mucha alegría ✨ te invitamos a la</p>
   <p><strong>Primera Comunión de</strong></p>
   <p> Kevin Ezequiel</p>
   <br />
@@ -139,7 +139,7 @@ h1 {
 
 <div id="carta2" class="carta">
   <h1>🕊️ Confirmación 🙏</h1>
-  <p>Nos llena de gozo 💖 invitarte también a la</p>
+  <p>Nos llena de gozo 👼 invitarte también a la</p>
   <p><strong>Confirmación de Yael Efraín</strong></p>
   <br />
 <p>Mis padrinos:</p>
@@ -152,10 +152,10 @@ h1 {
 </div>
 
 <div id="carta3" class="carta">
-  <h1>📍 Detalles del Evento 📅</h1>
+  <h1>📍 Detalles del Evento </h1>
   <p>📍 Calle el Molino s/n</p>
   <p>🚏 entre Av. México y El Pedregal</p>
-  <p>📅 Fecha: 3 de Agosto, 2025</p>
+  <p>🗓️Fecha: 3 de Agosto, 2025</p>
   <p>🕓 Hora: 2:30 PM</p>
   <br />
   <p class="firma">✨ ¡Será un honor contar con tu prescencia! 🙌</p>
@@ -165,7 +165,6 @@ h1 {
   <h1>🎊 ¡Te esperamos! 🎊</h1>
   <p>Será un momento muy especial 🌟</p>
   <p>No faltes 💖🙏</p>
-  <p class="firma">💌 Con todo nuestro cariño</p>
 </div>
 
   <script>
