--- a/invitacion.html
+++ b/invitacion.html
@@ -162,9 +162,9 @@ h1 {
 </div>
 
 <div id="carta4" class="carta">
-  <h1>🎊 ¡Te esperamos! 🎊</h1>
+  <h1> ¡Te esperamos! </h1>
   <p>Será un momento muy especial 🌟</p>
-  <p>No faltes 💖🙏</p>
+  <p>No faltes 🙏</p>
 </div>
 
   <script>
